- Changed: Removed d_with_targetselect/"Players can select next main target:" and integrated it in d_with_targetselect_count/"Players can select from available targets:"
- Changed: There is now also an enemy AI vehicle MHQ at main targets in the TT version like it is in the normal coop version
- Changed: Setting d_number_attack_planes, d_number_attack_choppers, d_number_light_attack_choppers or d_number_attack_uavs to 0 in init\fn_preinit.sqf does not spawn air vehicles for the specific class
- Changed: In ranked mode bagpacks are now added to the ranks by their maximumLoad property, < 200 for all ranks, < 300 for ranks starting at sergeant, < 400 for ranks starting at major and everything above for colonel and better 
- Changed: In ranked mode vests are now added to the ranks by their maximumLoad supply property, < 101 for all ranks, < 121 for ranks starting at sergeant, < 141 for ranks starting at major and everything above for colonel and better 
- Fixed: When using earplugs in the TT version a dialog error appeared because of a missing gui baseclass
- Fixed: Heli lift script did break with an error message when the mass of the lift object was lower than the max load of the chopper
- Fixed: When a player changed the TeamSwitch key in the A3 settings when the mission was running the mission didn't pick up the new key
- Fixed: Added missing items like goggles in Virtual Arsenal in ranked mode
- Fixed: Some colors in the game class CfgMarkerColors are stored as string instead of number resulting in broken 3D marker drawing
- Fixed: Target select entire map caused a script error
- Fixed: Possible script error in fn_spectdraw3d.sqf
- Improved: Boats can now also be used as MHQs (needs empty cargo positions to spawn into a boat and can't load ammo boxes but doesn't need to get deployed)