@@ -24,6 +24,7 @@ ATTENTION: Altis Blufor Carrier version mission.sqm file has changed
 - Changed: Setting d_number_attack_planes, d_number_attack_choppers, d_number_light_attack_choppers or d_number_attack_uavs to 0 in init\fn_preinit.sqf does not spawn air vehicles for the specific class
 - Changed: In ranked mode bagpacks are now added to the ranks by their maximumLoad property, < 200 for all ranks, < 300 for ranks starting at sergeant, < 400 for ranks starting at major and everything above for colonel and better 
 - Changed: In ranked mode vests are now added to the ranks by their maximumLoad supply property, < 101 for all ranks, < 121 for ranks starting at sergeant, < 141 for ranks starting at major and everything above for colonel and better 
+- Changed: Added d_number_attack_planes, d_number_attack_choppers, d_number_light_attack_choppers and d_number_attack_uavs to dom_settings table, means, those values can now be changed in the Domination SQL database
 - Fixed: When using earplugs in the TT version a dialog error appeared because of a missing gui baseclass
 - Fixed: Heli lift script did break with an error message when the mass of the lift object was lower than the max load of the chopper
 - Fixed: When a player changed the TeamSwitch key in the A3 settings when the mission was running the mission didn't pick up the new key
